--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lgweb.ru",
   "devDependencies": {
     "browser-sync": "^2.11.1",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0"
   }
 }
