--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,8 @@
   "name": "lgweb.ru",
   "dependencies": {
     "jquery": "1.8",
-    "normalize-css": "normalize.css#~3.0.3"
+    "modernizr": "2.8.3",
+    "jquery-placeholder": "~2.3.1",
+    "normalize-css": "~3.0.3"
   }
 }
