--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "jquery": "1.8",
     "modernizr": "2.8.3",
     "jquery-placeholder": "~2.3.1",
-    "normalize-css": "~3.0.3"
+    "normalize-css": "~3.0.3",
+    "qtip2": "~2.2.1"
   }
 }
