--- a/package.json
+++ b/package.json
@@ -2,6 +2,17 @@
   "name": "lgweb.ru",
   "devDependencies": {
     "browser-sync": "^2.11.1",
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-load-plugins": "^1.2.0",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-rimraf": "^0.2.0",
+    "gulp-size": "^2.0.0",
+    "gulp-uglify": "^1.5.1",
+    "gulp-useref": "^3.0.5",
+    "wiredep": "^3.0.0"
   }
 }
